fix horizontal scroll

--- a/src/scss/foundation/_base.scss
+++ b/src/scss/foundation/_base.scss
@@ -5,7 +5,7 @@ html {
   font-family: $fontMain;
 }
 
-body {
+main {
   overflow-x: hidden;
 }
 
